// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.runtime.kubernetes.kubetool;

option go_package = "namespacelabs.dev/foundation/framework/kubernetes/kubetool";

message KubernetesEnv {
    string namespace = 1;
}

message KubernetesToolContext {
    string namespace            = 1;
    bool can_set_namespace      = 2;
    bool has_apply_role_binding = 3;
}